test-suite/for-in/typecheck/pass/for_in_range_inclusive_typed.first
interaction main() -> Unit {
  for i in 1..=10 {
    let x: Int = i;
  };
  return;
}
