test-suite/for-in/typecheck/fail/for_in_over_bool.first
interaction main() -> Unit {
  for x in true { let _ = x; };
  return;
}
